<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.Toolbar
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/toolbar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/colorPrimary"
    android:elevation="4dp"
    app:title="Waste Recognition App"
    app:titleTextColor="@android:color/black">

    <!-- User Initial TextView -->
    <TextView
        android:id="@+id/user_initial"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:background="@drawable/circle_background"
        android:textColor="@android:color/white"
        android:gravity="center"
        android:textSize="30sp"
        android:layout_gravity="end|center_vertical"
        android:layout_marginEnd="16dp" />
</androidx.appcompat.widget.Toolbar>