...
    <string name="change_pass_link">Change Password</string>
    <string name="back_to_login_page_from_pass_recovery">Back to Login</string>
    <string name="email_for_pass_link">Send Reset Link</string>
    <string name="password_recovery_text_enter_email_below">Please enter your email address below, and we’ll send you a link to help reset your password.</string>

<string name="info_icon">information</string>
    <string name="user_options_menu_Logout">Logout</string>
    <string name="Date_New_info">"Date: "</string>
    <string name="Time_New_info">"Time: "</string>
    <string name="green_bin_scanner_txt">Green Bin</string>
    <string name="Reset_Your_Password_Header">Reset Your Password</string>
</resources>
