...
                            android:maxLines="1"
                            android:enabled="false" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <!-- Change Password Link for User Convenience -->
                    <TextView
                        android:id="@+id/change_password_link"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/change_pass_link"
                        android:textColor="@color/ui_primary_green"
                        android:textStyle="bold"
                        android:layout_gravity="center"
...
